# freecurrencyapi-rs

./: Cargo.toml  README.md
src/: lib.rs  utils.rs
src/api/: mod.rs
src/models/: mod.rs
