[package]
name = "freecurrencyapi-rs"
description = "An API wrapper for freecurrencyapi.com"
homepage = "https://github.com/everapihq/freecurrencyapi-rs"
repository = "https://github.com/everapihq/freecurrencyapi-rs"
documentation = "https://freecurrencyapi.com/docs"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
serde_json = "1.0.72"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]

[dependencies.strum]
version = "0.24"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.7"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "1.19.2"
features = ["rt", "macros"]
